# sdlc

./: .env.example  .gitignore  docker-compose.yml  memoized-snacking-harp.md  notes.md  sdlc-pipeline.drawio
.github/workflows/: ci.yml  docker-build.yml  secret-scan.yml
atlassian-bridge/: .env.example  Dockerfile  pyproject.toml
atlassian-bridge/app/: __init__.py  client.py  confluence.py  jira.py  main.py  models.py
doc/: README.md
doc/api/: README.md  api-flows.md  endpoints.md
doc/architecture/: DESIGN.md  components.md
doc/changelog/: CHANGELOG.md
doc/database/: er-diagram.md  migrations.md  schema.md
doc/guides/: DEVELOPER.md
doc/workflows/: business-logic.md  data-flows.md  sequence-diagrams.md
sdlc-app/: .env.example  .gitignore  Dockerfile  README.md  mypoc.code-workspace  package.json  pnpm-lock.yaml  sdlc-app.code-workspace  tmp
sdlc-app/.github/: copilot-instructions.md
sdlc-app/app/: globals.css  layout.tsx
sdlc-app/components/: agent-chat.tsx  agent-context-panel.tsx  agent-selector.tsx  app-shell.tsx  chat-container.tsx  chat-input.tsx  chat-message.tsx  empty-state.tsx  github-agent-picker.tsx  header.tsx  issue-creator.tsx  mobile-sidebar.tsx  model-selector.tsx  service-agent-picker.tsx  session-detail.tsx  session-status-badge.tsx  sessions-list.tsx  settings-view.tsx  sidebar.tsx  status-indicator.tsx  tool-execution-card.tsx
sdlc-app/docs/: 06_scenario_automated_testing.drawio  ATAF-Architecture.drawio  ATAF-Design.md  (+5 more)
sdlc-app/services/copilot-agent/: .env.example  Dockerfile  README.md  agent.py  agent_copilot.py  api_server.py  event_bus.py  pyproject.toml  registry.py  requirements.txt  session_store.py  worker.py
sdlc-app/services/copilot-agent/agents/: assistant.md  ba.agent.md  coder.md  doc-architect.agent.md  e2e-tester.md  jira-ba.agent.md  jira-reader.md  jira-test-automator.agent.md  test-analyst.agent.md  test-designer.agent.md
sdlc-app/services/copilot-agent/skills/: bdd-cucumber-node.skill.md  bdd-playwright.skill.md  bdd-pytest.skill.md  bdd-scenarios.skill.md  read-confluence.skill.md  read-jira.skill.md
sdlc-app/services/jira-cli/: .env.example  README.md  jira_cli.py  pyproject.toml  requirements.txt
(+34 files in other folders)
